# serializer version: 1
# name: test_main_files
  tuple(
    '',
    None,
    '''
      TMP_PATH_HERE/path/to/Album Title Here/01 - Song Title Here.wav
      some            : stat                            
      
      TMP_PATH_HERE/path/to/Album Title Here/02 - Song Title Here.wav
      some            : stat                            
  
    ''',
    _CallList([
      _Call(
        '',
        tuple(
          'TMP_PATH_HERE/path/to/Album Title Here/01 - Song Title Here.wav',
        ),
        dict({
          'verbose': 0,
        }),
      ),
      _Call(
        '',
        tuple(
          'TMP_PATH_HERE/path/to/Album Title Here/02 - Song Title Here.wav',
        ),
        dict({
          'verbose': 0,
        }),
      ),
    ]),
  )
# ---
# name: test_main_no_args
  tuple(
    '',
    None,
    '''
      TMP_PATH_HERE/path/to/Song Title Here/Song Title Here.wav
      some            : stat                            
      
      TMP_PATH_HERE/path/to/Song Title Here/Song Title Here (A Cappella).wav
      some            : stat                            
  
    ''',
    _CallList([
      _Call(
        '',
        tuple(
        ),
        dict({
        }),
      ),
    ]),
    _CallList([
      _Call(
        '',
        tuple(
          'TMP_PATH_HERE/path/to/Song Title Here/Song Title Here.wav',
        ),
        dict({
          'verbose': 0,
        }),
      ),
      _Call(
        '',
        tuple(
          'TMP_PATH_HERE/path/to/Song Title Here/Song Title Here (A Cappella).wav',
        ),
        dict({
          'verbose': 0,
        }),
      ),
    ]),
  )
# ---
